# MonoGraph

./: .gitignore  README.md
benchmark/: edge_transform.py  vertex_transform.py
benchmark/example1/: pure_scan.py  query.py  query_output.txt
csrc/: test  test.cpp
dataset/: ldbc.py
db_engine/example/: copy.cypher  db_random.py  db_seq.py  expand_wo_zongmap.output  expand_zongmap.output  gene_data_random.py  gene_data_seq.py  output  output.txt  output2  random.output  random_big.output  random_expand.output  random_output  schema.cypher  seq.output  seq_big.output  test.output  test1.output  test2.output  wo_zongmap.output  zongmap.output
db_engine/ldbc/: example1.py
db_engine/ldbc/bi-benchmark/: bi1.py
db_engine/ldbc/example1/: copy.cypher  import.py  output  output1  query.cypher  query.py  reorder-example.py  schema.cypher  sf10.output
db_engine/ldbc/ldbc-1/: download_data.py  (+1 more)
engine/: comment_indices_10.pkl  comment_indices_30.pkl  expand_test.py  indices.txt  operator.py  test.py  test_query.py  test_scan.py
hashmap/: CMakeLists.txt  MakeFIle  build.sh  import_LDBC.py  ldbc_tgraph_edge.txt  prl_vector.h  setup.py  t_graph.cpp  t_graph.h  table.h  vector_benchmark  vector_benchmark.cpp
loader/: README.md  basic_table.py  ldbc.py  reorder.py
python/: basic_table.py  ldbc.py  mag.py
reorder/: reorder-sf1.py
source/: setup.py
source/csrc/: t_graph.cpp  t_graph.h  table.h
storage/: basic_table.py  edge_table.py  graph.py  mono.py  reorder.py  transform_graph.py  vertex_table.py
transform/: graph_type.py  import.py  key_type.py  table_type.py
(+13 files in other folders)
